--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@ th, td { padding: 0px; }
 }
 
 </style>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61469857-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head><body>
 <script src="jquery.js"></script>
 <script src="utils.js"></script>
