--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 <style>
 
+/* test */
+
 html { box-sizing: border-box; }
 *, *:before, *:after { box-sizing: inherit; }
 body {
