--- a/data.html
+++ b/data.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<title>scraps</title>
+<title>data editor</title>
 <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
@@ -94,7 +94,7 @@ function main() {
         enableLiveAutocompletion: true
     })
 
-    editor.getSession().setMode("ace/mode/javascript")
+    editor.getSession().setMode("ace/mode/html")
     var onChange = function () {}
     editor.on('input', function () {
         onChange(editor.getSession().getValue())
