my commit message

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ th, td { padding: 0px; }
 <script src="fancybox/jquery.fancybox.pack.js"></script>
 <script>
 
-var hashToTab = { home : 'Home', aboutme : 'About Me', blog : 'Blog', pokerupfront : 'PokerUpFront', gallery : 'Gallery'}
+var hashToTab = { home : 'Home', aboutme : 'About Me', blog : 'Blog', pokerupfront : 'Coming Soon', gallery : 'Gallery'}
 
 function drawTabs(current) {
 	var d = $('<div class="nilland top-tabs" style="position:absolute;right:0px;top:75px;"/>')
