my commit message

--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@ function drawLiveUpdates() {
 }
 
 function drawPokerUpFront() {
-	var d = drawPageTitle('PokerUpFront')
-	d.append($('<div style="width:966px;"/>').html(data['PokerUpFront'].replace(/\n/g, '<br/>')))
+	var d = drawPageTitle('Coming Soon')
+	//d.append($('<div style="width:966px;"/>').html(data['PokerUpFront'].replace(/\n/g, '<br/>')))
 	return d
 }
 
