--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ function main() {
 
 	var feed = new Instafeed({
         get: 'user',
-        userId: 'michael_loncar',
+        userId: 'nickmaxwell10',
         clientId: '19ed952bb4c540f98eca7611bd92465a'
     });
     feed.run();
