--- a/index.html
+++ b/index.html
@@ -455,8 +455,7 @@ function main() {
 
 	var feed = new Instafeed({
         get: 'user',
-        userId: 'nickmaxwell10',
-        clientId: '19ed952bb4c540f98eca7611bd92465a'
+        userId: 'nickmaxwell10'
     });
     feed.run();
 }
