--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ function main() {
 
 	var feed = new Instafeed({
         get: 'user',
-        userId: 'nickmaxwell10'
+        userId: '1016902597'
     });
     feed.run();
 }
