--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@ function main() {
 	window.onhashchange()
 
 	var feed = new Instafeed({
+		clientId: '19ed952bb4c540f98eca7611bd92465a',
         get: 'user',
         userId: '1016902597'
     });
