--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@ function main() {
 	window.onhashchange()
 
 	var feed = new Instafeed({
+		accessToken: '584733730.1677ed0.312d42b15d084b178dd95fb2b76c7782',
 		clientId: '19ed952bb4c540f98eca7611bd92465a',
         get: 'user',
         userId: '584733730'
