--- a/index.html
+++ b/index.html
@@ -457,7 +457,8 @@ function main() {
 		accessToken: '584733730.1677ed0.312d42b15d084b178dd95fb2b76c7782',
 		clientId: '19ed952bb4c540f98eca7611bd92465a',
         get: 'user',
-        userId: '584733730'
+        userId: '584733730',
+        template: '<a target="_blank" href="{{link}}"><img src="{{image}}" width="300px" height="300px" style="float:left;cursor:pointer"/></a>'
     });
     feed.run();
 }
