Change slide images

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ function drawSlides() {
 
 	var slides = _.map(new Array(5), function (__, i) {
 		var img = new Image()
-		img.src = 'images/slide' + (i + 1) + '.jpg'
+		img.src = 'images/slide' + (i + 1) + '.png'
 		return img
 	})
 	var currentSlide = 0
