Update Instagram Gallery Style

--- a/index.html
+++ b/index.html
@@ -34,6 +34,92 @@ th, td { padding: 0px; }
 	line-height: 21px;
 }
 
+.img-featured-container {
+  overflow: hidden;
+  position: relative;
+}
+
+.img-featured-container img {
+  width: 100%;
+/*   padding: 10px; */
+}
+
+.img-featured-container .img-backdrop {
+  background: linear-gradient(135deg, rgba(38, 163, 255, 0.85), rgba(83, 201, 179, 0.85));
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+.img-featured-container:hover > .img-backdrop {
+  opacity: 1;
+}
+
+/* center text horizontally and vertically on image hover */
+.img-featured-container .description-container {
+  color: #fff;
+  font-size: 16px;
+  line-height: 1.2;
+  padding: 0 30px;
+  text-align: center;
+  line-height: 20px;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform-style: preserve-3d;
+  z-index: 2;
+  opacity: 0;
+  transition: all .2s ease;
+}
+
+.img-featured-container .description-container .fa-instagram {
+  font-size: 40px;
+}
+
+.img-featured-container .description-container p {
+  font-weight: 300;
+  margin-bottom: 0;
+}
+
+.img-featured-container:hover .description-container {
+  opacity: 1;
+}
+
+.img-featured-container .description-container .caption {
+  display: none;
+  margin-bottom: 10px;
+}
+
+.img-featured-container .description-container .likes,
+.img-featured-container .description-container .comments {
+  margin: 0 5px;
+}
+
+/* load more button */
+#btn-instafeed-load {
+  color: #fff;
+  background: #26a3ff;
+  font-size: 16px;
+  margin: 20px auto;
+  padding: 8px 40px;
+  display: block;
+  border: none;
+}
+
+/* media queries  */
+@media screen and (min-width:768px) {
+  .img-featured-container .description-container .caption {
+    display: block;
+  }
+}
+
 </style>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -393,7 +479,7 @@ function drawGallery() {
     // 		}))
     // 	}
     // })
-	d.append('<div id="instafeed"></div>')
+	d.append('<div id="instafeed-gallery-feed" class="gallery"></div><button id="btn-instafeed-load" class="btn">Load more</button>')
     d.append($('<div style="clear:both"/>'))
 
 	return d
@@ -447,14 +533,29 @@ function main() {
 			d.append(drawPokerUpFront())
 		if (hash == 'gallery') {
 			d.append(drawGallery())
-			var feed = new Instafeed({
-				accessToken: '1016902597.1677ed0.d500fb7bb92d4639bf3ff1a081483753',
-				clientId: '19ed952bb4c540f98eca7611bd92465a',
-		        get: 'user',
-		        userId: '1016902597',
-		        template: '<a target="_blank" href="{{link}}"><img src="{{image}}" width="300px" height="300px" style="float:left;cursor:pointer"/></a>'
-		    })
-		    feed.run()
+		    var galleryFeed = new Instafeed({
+			  get: 'user',
+			  userId: '1016902597',
+			  accessToken: '1016902597.1677ed0.d500fb7bb92d4639bf3ff1a081483753',
+			  resolution: 'standard_resolution',
+			  useHttp: 'true',
+			  limit: 6,
+			  template: '<div class="col-xs-12 col-sm-6 col-md-4"><a href="{{image}}"><div class="img-featured-container"><div class="img-backdrop"></div><div class="description-container"><p class="caption">{{caption}}</p><span class="likes"><i class="icon ion-heart"></i> {{likes}}</span><span class="comments"><i class="icon ion-chatbubble"></i> {{comments}}</span></div><img src="{{image}}" class="img-responsive"></div></a></div>',
+			  target: 'instafeed-gallery-feed',
+			  after: function() {
+			    // disable button if no more results to load
+			    if (!this.hasNext()) {
+			      btnInstafeedLoad.setAttribute('disabled', 'disabled')
+			    }
+			  },
+			})
+			
+			galleryFeed.run()
+
+			var btnInstafeedLoad = document.getElementById("btn-instafeed-load")
+			btnInstafeedLoad.addEventListener("click", function() {
+			  galleryFeed.next()
+			})
 		}
 	    D.append(drawFooter())
 		$('body').empty().append(D.append(d))
