Instagram feed style update

--- a/index.html
+++ b/index.html
@@ -479,7 +479,8 @@ function drawGallery() {
     // 		}))
     // 	}
     // })
-	d.append('<div id="instafeed-gallery-feed" class="gallery"></div><button id="btn-instafeed-load" class="btn">Load more</button>')
+	d.append('<div id="instafeed-gallery-feed" class="gallery"></div>')
+	d.append('<button id="btn-instafeed-load" class="btn">Load more</button>')
     d.append($('<div style="clear:both"/>'))
 
 	return d
