--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ function main() {
 			  resolution: 'standard_resolution',
 			  useHttp: 'true',
 			  limit: 6,
-			  template: '<div class="col-xs-12 col-sm-6 col-md-4"><a href="{{image}}"><div class="img-featured-container"><div class="img-backdrop"></div><div class="description-container"><p class="caption">{{caption}}</p><span class="likes"><i class="icon ion-heart"></i> {{likes}}</span><span class="comments"><i class="icon ion-chatbubble"></i> {{comments}}</span></div><img src="{{image}}" class="img-responsive"></div></a></div>',
+			  template: '<div style="width: 33.333333%; float: left"><a href="{{image}}"><div class="img-featured-container"><div class="img-backdrop"></div><div class="description-container"><p class="caption">{{caption.substring(0,250)}}</p><span class="likes"><i class="icon ion-heart"></i> {{likes}}</span><span class="comments"><i class="icon ion-chatbubble"></i> {{comments}}</span></div><img src="{{image}}" class="img-responsive"></div></a></div>',
 			  target: 'instafeed-gallery-feed',
 			  after: function() {
 			    // disable button if no more results to load
