Instagram feed style update

--- a/index.html
+++ b/index.html
@@ -541,7 +541,21 @@ function main() {
 			  resolution: 'standard_resolution',
 			  useHttp: 'true',
 			  limit: 6,
-			  template: '<div style="width: 33.333333%; float: left"><a href="{{image}}"><div class="img-featured-container"><div class="img-backdrop"></div><div class="description-container"><p class="caption">{{caption.substring(0,250)}}</p><span class="likes"><i class="icon ion-heart"></i> {{likes}}</span><span class="comments"><i class="icon ion-chatbubble"></i> {{comments}}</span></div><img src="{{image}}" class="img-responsive"></div></a></div>',
+			  filter: function(image) {
+			      var MAX_LENGTH = 250;
+
+			      // here we create a property called "short_caption"
+			      // on the image object, using the original caption
+			      if (image.caption && image.caption.text) {
+			        image.short_caption = image.caption.text.slice(0, MAX_LENGTH);
+			      } else {
+			        image.short_caption = "";
+			      }
+
+			      // ensure the filter doesn't reject any images
+			      return true;
+		      },
+			  template: '<div style="width: 33.333333%; float: left"><a href="{{image}}"><div class="img-featured-container"><div class="img-backdrop"></div><div class="description-container"><p class="caption">{{model.short_caption}}</p><span class="likes"><i class="icon ion-heart"></i> {{likes}}</span><span class="comments"><i class="icon ion-chatbubble"></i> {{comments}}</span></div><img src="{{image}}" class="img-responsive"></div></a></div>',
 			  target: 'instafeed-gallery-feed',
 			  after: function() {
 			    // disable button if no more results to load
