--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ th, td { padding: 0px; }
 }
 
 .instafeed-card {
-	width: 33.333333%; 
+	width: 33.33333333%; 
 	float: left;
 	position: relative;
     min-height: 1px;
@@ -44,6 +44,7 @@ th, td { padding: 0px; }
 .img-featured-container {
   overflow: hidden;
   position: relative;
+  height: 350px;
 }
 
 .img-featured-container img {
@@ -59,7 +60,7 @@ th, td { padding: 0px; }
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 350px;
   position: absolute;
   z-index: 1;
   opacity: 0;
@@ -80,7 +81,7 @@ th, td { padding: 0px; }
   line-height: 20px;
   width: 100%;
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   transform-style: preserve-3d;
