Instagram feed style update

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html><head><meta charset="utf-8"><meta name="viewport" content="initial-scale=1.0" />
 <title>MichaelLoncar.com</title>
 <link rel="stylesheet" href="fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" type="text/css" media="screen" />
 <style>
 
 /* test */
@@ -122,6 +123,8 @@ th, td { padding: 0px; }
   padding: 8px 40px;
   display: block;
   border: none;
+  position: relative;
+  bottom: -15px;
 }
 
 /* media queries  */
