--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ function drawSlides() {
 
 	var slides = _.map(new Array(5), function (__, i) {
 		var img = new Image()
-		img.src = 'images/slide' + (i + 1) + '.png'
+		img.src = 'images/slide' + (i + 1) + '.jpeg'
 		return img
 	})
 	var currentSlide = 0
