Learn how to crush

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ function drawCards() {
 	var d = $('<div style="position:relative;width:966px;height:249px;border:2px solid rgba(255, 255, 255, 0.1);"/>')
 	d.append($('<div style="width:100%;height:100%;background:black"/>'))
 
-	var saying = "Coaching is an investment.".split(/ /)
+	var saying = "Learn how to crush.".split(/ /)
 	var cards = _.map(new Array(4), function (__, i) {
 		var img = new Image()
 		img.src = 'images/card' + (i + 1) + '.png'
